Correct the player-details spacing

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -71,5 +71,14 @@ img {
 }
 
 .playerNum, .playerPos {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.playerNum {
   padding-right: 12px;
+}
+
+.playerPos {
+  padding-left: 12px;
 }
